# Diwanic

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  diwanic_plan.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  run_api.py  setup_env.py
.github/workflows/: ci.yml
configs/: poets.yaml
data/embeddings/: poems_with_embeddings.jsonl
data/processed/: poems_cleaned.jsonl
data/raw/: multiple_poems.json  poems_all.jsonl  test_poem.json  test_schema.jsonl
diwanic/: discovery.py
diwanic/api/: main.py
diwanic/app/: database.py  main.py  portal.py  ui.py
diwanic/cli/: main.py
diwanic/core/: config.py  logger.py  observability.py
diwanic/embeddings/: cache.py  generator.py
diwanic/infrastructure/: qdrant.py
diwanic/models/: __init__.py
diwanic/preprocessing/: cleaner.py  pipeline.py
diwanic/schemas/: query.py  search.py
diwanic/scraper/: fetcher.py  models.py  parser.py  pipeline.py
diwanic/search/: engine.py  evaluation.py  router.py  rrf.py
diwanic/storage/: db_manager.py  repository.py  schema.sql
diwanic/utils/: logger_util.py  text_splitter.py  text_utils.py
docs/: PROJECT_FLOW_EXPLAINED.md  README.md  architecture.md  project_flow.md
notebook/: scrapper_exploration.ipynb
scripts/: add_poet.py  discover_poet.py  generate_embeddings.py  ingest_to_db.py  load_to_qdrant.py  preprocess_data.py  run_full_pipeline.py  scrape_all.py  search.py  set_github_secrets.py
tests/: golden_set.jsonl  test_api.py  test_config.py  test_embeddings.py  test_initialization.py  test_repository.py
(+25 files in other folders)
