[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diwanic"
version = "0.1.0"
description = "Arabic poetry retrieval system"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "psycopg2-binary",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "sentence-transformers",
    "qdrant-client",
    "python-dotenv",
    "pyyaml",
    "requests",
    "beautifulsoup4",
    "prefect",
    "openai",
    "typer",
    "gradio",
    "logfire>=4.0",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-sqlalchemy",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["diwanic*"]
